// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Atividades e Performance — mesmos números com os mesmos dados > Atividades, filtro de 2 SDRs 1`] = `
{
  "activityTypes": [
    {
      "color": "#06b6d4",
      "count": 75,
      "label": "Entregues",
      "percentage": 19.3,
      "type": "delivered",
    },
    {
      "color": "#ec4899",
      "count": 66,
      "label": "Clicadas",
      "percentage": 17,
      "type": "clicked",
    },
    {
      "color": "#f59e0b",
      "count": 59,
      "label": "Reuniões",
      "percentage": 15.2,
      "type": "meeting_scheduled",
    },
    {
      "color": "#3b82f6",
      "count": 56,
      "label": "Enviadas",
      "percentage": 14.4,
      "type": "sent",
    },
    {
      "color": "#8b5cf6",
      "count": 51,
      "label": "Abertas",
      "percentage": 13.1,
      "type": "opened",
    },
    {
      "color": "#22c55e",
      "count": 42,
      "label": "Respondidas",
      "percentage": 10.8,
      "type": "replied",
    },
    {
      "color": "#6b7280",
      "count": 39,
      "label": "Falharam",
      "percentage": 10.1,
      "type": "failed",
    },
  ],
  "channelCompletion": [
    {
      "channel": "whatsapp",
      "completedPercent": 94.6,
      "label": "WhatsApp",
    },
    {
      "channel": "research",
      "completedPercent": 93.3,
      "label": "Pesquisa",
    },
    {
      "channel": "linkedin",
      "completedPercent": 92.1,
      "label": "LinkedIn",
    },
    {
      "channel": "email",
      "completedPercent": 84.3,
      "label": "E-mail",
    },
    {
      "channel": "phone",
      "completedPercent": 84,
      "label": "Telefone",
    },
  ],
  "channelVolume": [
    {
      "channel": "whatsapp",
      "color": "#22c55e",
      "count": 92,
      "label": "WhatsApp",
    },
    {
      "channel": "linkedin",
      "color": "#0ea5e9",
      "count": 76,
      "label": "LinkedIn",
    },
    {
      "channel": "phone",
      "color": "#8b5cf6",
      "count": 75,
      "label": "Telefone",
    },
    {
      "channel": "research",
      "color": "#f59e0b",
      "count": 75,
      "label": "Pesquisa",
    },
    {
      "channel": "email",
      "color": "#3b82f6",
      "count": 70,
      "label": "Email",
    },
  ],
  "dailyTrend": [
    {
      "count": 0,
      "date": "2026-07-31",
      "label": "31/07",
      "target": 20,
    },
    {
      "count": 14,
      "date": "2026-08-01",
      "label": "01/08",
      "target": 20,
    },
    {
      "count": 14,
      "date": "2026-08-02",
      "label": "02/08",
      "target": 20,
    },
    {
      "count": 16,
      "date": "2026-08-03",
      "label": "03/08",
      "target": 20,
    },
    {
      "count": 14,
      "date": "2026-08-04",
      "label": "04/08",
      "target": 20,
    },
    {
      "count": 11,
      "date": "2026-08-05",
      "label": "05/08",
      "target": 20,
    },
    {
      "count": 17,
      "date": "2026-08-06",
      "label": "06/08",
      "target": 20,
    },
    {
      "count": 8,
      "date": "2026-08-07",
      "label": "07/08",
      "target": 20,
    },
    {
      "count": 10,
      "date": "2026-08-08",
      "label": "08/08",
      "target": 20,
    },
    {
      "count": 20,
      "date": "2026-08-09",
      "label": "09/08",
      "target": 20,
    },
    {
      "count": 20,
      "date": "2026-08-10",
      "label": "10/08",
      "target": 20,
    },
    {
      "count": 17,
      "date": "2026-08-11",
      "label": "11/08",
      "target": 20,
    },
    {
      "count": 12,
      "date": "2026-08-12",
      "label": "12/08",
      "target": 20,
    },
    {
      "count": 16,
      "date": "2026-08-13",
      "label": "13/08",
      "target": 20,
    },
    {
      "count": 13,
      "date": "2026-08-14",
      "label": "14/08",
      "target": 20,
    },
    {
      "count": 19,
      "date": "2026-08-15",
      "label": "15/08",
      "target": 20,
    },
    {
      "count": 16,
      "date": "2026-08-16",
      "label": "16/08",
      "target": 20,
    },
    {
      "count": 9,
      "date": "2026-08-17",
      "label": "17/08",
      "target": 20,
    },
    {
      "count": 5,
      "date": "2026-08-18",
      "label": "18/08",
      "target": 20,
    },
    {
      "count": 18,
      "date": "2026-08-19",
      "label": "19/08",
      "target": 20,
    },
    {
      "count": 14,
      "date": "2026-08-20",
      "label": "20/08",
      "target": 20,
    },
    {
      "count": 17,
      "date": "2026-08-21",
      "label": "21/08",
      "target": 20,
    },
    {
      "count": 17,
      "date": "2026-08-22",
      "label": "22/08",
      "target": 20,
    },
    {
      "count": 14,
      "date": "2026-08-23",
      "label": "23/08",
      "target": 20,
    },
    {
      "count": 15,
      "date": "2026-08-24",
      "label": "24/08",
      "target": 20,
    },
    {
      "count": 12,
      "date": "2026-08-25",
      "label": "25/08",
      "target": 20,
    },
    {
      "count": 15,
      "date": "2026-08-26",
      "label": "26/08",
      "target": 20,
    },
    {
      "count": 8,
      "date": "2026-08-27",
      "label": "27/08",
      "target": 20,
    },
    {
      "count": 7,
      "date": "2026-08-28",
      "label": "28/08",
      "target": 20,
    },
  ],
  "goal": {
    "actual": 7,
    "isWeekend": false,
    "percentage": 35,
    "target": 20,
  },
  "kpis": {
    "activitiesToday": 7,
    "avgPerDay": 19.4,
    "goalAchievement": 97,
    "totalActivities": 388,
  },
  "leadsInPeriod": 77,
  "totalLost": 19,
  "totalWon": 17,
  "userBreakdown": [
    {
      "activitiesCompleted": 0,
      "activitiesTotal": 0,
      "avatarUrl": undefined,
      "channelProgress": [],
      "inboundReplies": 0,
      "leads": 21,
      "leadsInProspection": 12,
      "leadsWithFirstActivity": 0,
      "lost": 2,
      "name": "U2",
      "onTimePercent": null,
      "phoneCalls": 0,
      "quartiles": [
        {
          "count": 4,
          "percent": 33,
          "quartile": 1,
        },
        {
          "count": 1,
          "percent": 8,
          "quartile": 2,
        },
        {
          "count": 7,
          "percent": 58,
          "quartile": 3,
        },
      ],
      "totalLeads": 36,
      "userId": "u2",
      "won": 5,
      "wonPercent": 71.4,
    },
    {
      "activitiesCompleted": 129,
      "activitiesTotal": 264,
      "avatarUrl": undefined,
      "channelProgress": [
        {
          "channel": "whatsapp",
          "color": "#22c55e",
          "completed": 29,
          "label": "WhatsApp",
          "total": 60,
        },
        {
          "channel": "phone",
          "color": "#8b5cf6",
          "completed": 30,
          "label": "Telefone",
          "total": 56,
        },
        {
          "channel": "linkedin",
          "color": "#0ea5e9",
          "completed": 30,
          "label": "LinkedIn",
          "total": 56,
        },
        {
          "channel": "research",
          "color": "#f59e0b",
          "completed": 26,
          "label": "Pesquisa",
          "total": 51,
        },
        {
          "channel": "email",
          "color": "#3b82f6",
          "completed": 14,
          "label": "Email",
          "total": 41,
        },
      ],
      "inboundReplies": 29,
      "leads": 23,
      "leadsInProspection": 4,
      "leadsWithFirstActivity": 111,
      "lost": 8,
      "name": "U1",
      "onTimePercent": 48.9,
      "phoneCalls": 56,
      "quartiles": [
        {
          "count": 3,
          "percent": 75,
          "quartile": 1,
        },
        {
          "count": 1,
          "percent": 25,
          "quartile": 3,
        },
      ],
      "totalLeads": 33,
      "userId": "u1",
      "won": 6,
      "wonPercent": 42.9,
    },
    {
      "activitiesCompleted": 0,
      "activitiesTotal": 0,
      "avatarUrl": undefined,
      "channelProgress": [],
      "inboundReplies": 0,
      "leads": 17,
      "leadsInProspection": 10,
      "leadsWithFirstActivity": 0,
      "lost": 5,
      "name": "U3",
      "onTimePercent": null,
      "phoneCalls": 0,
      "quartiles": [
        {
          "count": 1,
          "percent": 10,
          "quartile": 1,
        },
        {
          "count": 4,
          "percent": 40,
          "quartile": 2,
        },
        {
          "count": 5,
          "percent": 50,
          "quartile": 3,
        },
      ],
      "totalLeads": 25,
      "userId": "u3",
      "won": 1,
      "wonPercent": 16.7,
    },
    {
      "activitiesCompleted": 61,
      "activitiesTotal": 124,
      "avatarUrl": undefined,
      "channelProgress": [
        {
          "channel": "whatsapp",
          "color": "#22c55e",
          "completed": 17,
          "label": "WhatsApp",
          "total": 32,
        },
        {
          "channel": "email",
          "color": "#3b82f6",
          "completed": 14,
          "label": "Email",
          "total": 29,
        },
        {
          "channel": "research",
          "color": "#f59e0b",
          "completed": 11,
          "label": "Pesquisa",
          "total": 24,
        },
        {
          "channel": "linkedin",
          "color": "#0ea5e9",
          "completed": 11,
          "label": "LinkedIn",
          "total": 20,
        },
        {
          "channel": "phone",
          "color": "#8b5cf6",
          "completed": 8,
          "label": "Telefone",
          "total": 19,
        },
      ],
      "inboundReplies": 13,
      "leads": 0,
      "leadsInProspection": 0,
      "leadsWithFirstActivity": 76,
      "lost": 0,
      "name": "u4",
      "onTimePercent": 49.2,
      "phoneCalls": 19,
      "quartiles": [],
      "totalLeads": 0,
      "userId": "u4",
      "won": 0,
      "wonPercent": null,
    },
  ],
}
`;

exports[`Atividades e Performance — mesmos números com os mesmos dados > Atividades, sem filtro 1`] = `
{
  "activityTypes": [
    {
      "color": "#06b6d4",
      "count": 146,
      "label": "Entregues",
      "percentage": 16.1,
      "type": "delivered",
    },
    {
      "color": "#f59e0b",
      "count": 139,
      "label": "Reuniões",
      "percentage": 15.3,
      "type": "meeting_scheduled",
    },
    {
      "color": "#ec4899",
      "count": 135,
      "label": "Clicadas",
      "percentage": 14.9,
      "type": "clicked",
    },
    {
      "color": "#8b5cf6",
      "count": 130,
      "label": "Abertas",
      "percentage": 14.3,
      "type": "opened",
    },
    {
      "color": "#3b82f6",
      "count": 129,
      "label": "Enviadas",
      "percentage": 14.2,
      "type": "sent",
    },
    {
      "color": "#22c55e",
      "count": 124,
      "label": "Respondidas",
      "percentage": 13.7,
      "type": "replied",
    },
    {
      "color": "#6b7280",
      "count": 105,
      "label": "Falharam",
      "percentage": 11.6,
      "type": "failed",
    },
  ],
  "channelCompletion": [
    {
      "channel": "research",
      "completedPercent": 91.5,
      "label": "Pesquisa",
    },
    {
      "channel": "linkedin",
      "completedPercent": 90.4,
      "label": "LinkedIn",
    },
    {
      "channel": "whatsapp",
      "completedPercent": 87.7,
      "label": "WhatsApp",
    },
    {
      "channel": "email",
      "completedPercent": 86.9,
      "label": "E-mail",
    },
    {
      "channel": "phone",
      "completedPercent": 85.7,
      "label": "Telefone",
    },
  ],
  "channelVolume": [
    {
      "channel": "whatsapp",
      "color": "#22c55e",
      "count": 203,
      "label": "WhatsApp",
    },
    {
      "channel": "linkedin",
      "color": "#0ea5e9",
      "count": 198,
      "label": "LinkedIn",
    },
    {
      "channel": "email",
      "color": "#3b82f6",
      "count": 175,
      "label": "Email",
    },
    {
      "channel": "phone",
      "color": "#8b5cf6",
      "count": 168,
      "label": "Telefone",
    },
    {
      "channel": "research",
      "color": "#f59e0b",
      "count": 164,
      "label": "Pesquisa",
    },
  ],
  "dailyTrend": [
    {
      "count": 0,
      "date": "2026-07-31",
      "label": "31/07",
      "target": 20,
    },
    {
      "count": 27,
      "date": "2026-08-01",
      "label": "01/08",
      "target": 20,
    },
    {
      "count": 31,
      "date": "2026-08-02",
      "label": "02/08",
      "target": 20,
    },
    {
      "count": 36,
      "date": "2026-08-03",
      "label": "03/08",
      "target": 20,
    },
    {
      "count": 27,
      "date": "2026-08-04",
      "label": "04/08",
      "target": 20,
    },
    {
      "count": 31,
      "date": "2026-08-05",
      "label": "05/08",
      "target": 20,
    },
    {
      "count": 37,
      "date": "2026-08-06",
      "label": "06/08",
      "target": 20,
    },
    {
      "count": 22,
      "date": "2026-08-07",
      "label": "07/08",
      "target": 20,
    },
    {
      "count": 28,
      "date": "2026-08-08",
      "label": "08/08",
      "target": 20,
    },
    {
      "count": 34,
      "date": "2026-08-09",
      "label": "09/08",
      "target": 20,
    },
    {
      "count": 38,
      "date": "2026-08-10",
      "label": "10/08",
      "target": 20,
    },
    {
      "count": 42,
      "date": "2026-08-11",
      "label": "11/08",
      "target": 20,
    },
    {
      "count": 32,
      "date": "2026-08-12",
      "label": "12/08",
      "target": 20,
    },
    {
      "count": 34,
      "date": "2026-08-13",
      "label": "13/08",
      "target": 20,
    },
    {
      "count": 29,
      "date": "2026-08-14",
      "label": "14/08",
      "target": 20,
    },
    {
      "count": 34,
      "date": "2026-08-15",
      "label": "15/08",
      "target": 20,
    },
    {
      "count": 39,
      "date": "2026-08-16",
      "label": "16/08",
      "target": 20,
    },
    {
      "count": 21,
      "date": "2026-08-17",
      "label": "17/08",
      "target": 20,
    },
    {
      "count": 21,
      "date": "2026-08-18",
      "label": "18/08",
      "target": 20,
    },
    {
      "count": 43,
      "date": "2026-08-19",
      "label": "19/08",
      "target": 20,
    },
    {
      "count": 30,
      "date": "2026-08-20",
      "label": "20/08",
      "target": 20,
    },
    {
      "count": 33,
      "date": "2026-08-21",
      "label": "21/08",
      "target": 20,
    },
    {
      "count": 37,
      "date": "2026-08-22",
      "label": "22/08",
      "target": 20,
    },
    {
      "count": 31,
      "date": "2026-08-23",
      "label": "23/08",
      "target": 20,
    },
    {
      "count": 35,
      "date": "2026-08-24",
      "label": "24/08",
      "target": 20,
    },
    {
      "count": 37,
      "date": "2026-08-25",
      "label": "25/08",
      "target": 20,
    },
    {
      "count": 40,
      "date": "2026-08-26",
      "label": "26/08",
      "target": 20,
    },
    {
      "count": 28,
      "date": "2026-08-27",
      "label": "27/08",
      "target": 20,
    },
    {
      "count": 31,
      "date": "2026-08-28",
      "label": "28/08",
      "target": 20,
    },
  ],
  "goal": {
    "actual": 31,
    "isWeekend": false,
    "percentage": 155,
    "target": 20,
  },
  "kpis": {
    "activitiesToday": 31,
    "avgPerDay": 45.4,
    "goalAchievement": 227,
    "totalActivities": 908,
  },
  "leadsInPeriod": 77,
  "totalLost": 19,
  "totalWon": 17,
  "userBreakdown": [
    {
      "activitiesCompleted": 115,
      "activitiesTotal": 259,
      "avatarUrl": undefined,
      "channelProgress": [
        {
          "channel": "linkedin",
          "color": "#0ea5e9",
          "completed": 27,
          "label": "LinkedIn",
          "total": 66,
        },
        {
          "channel": "whatsapp",
          "color": "#22c55e",
          "completed": 27,
          "label": "WhatsApp",
          "total": 54,
        },
        {
          "channel": "phone",
          "color": "#8b5cf6",
          "completed": 20,
          "label": "Telefone",
          "total": 48,
        },
        {
          "channel": "research",
          "color": "#f59e0b",
          "completed": 17,
          "label": "Pesquisa",
          "total": 46,
        },
        {
          "channel": "email",
          "color": "#3b82f6",
          "completed": 24,
          "label": "Email",
          "total": 45,
        },
      ],
      "inboundReplies": 42,
      "leads": 21,
      "leadsInProspection": 12,
      "leadsWithFirstActivity": 105,
      "lost": 2,
      "name": "U2",
      "onTimePercent": 44.4,
      "phoneCalls": 48,
      "quartiles": [
        {
          "count": 4,
          "percent": 33,
          "quartile": 1,
        },
        {
          "count": 1,
          "percent": 8,
          "quartile": 2,
        },
        {
          "count": 7,
          "percent": 58,
          "quartile": 3,
        },
      ],
      "totalLeads": 36,
      "userId": "u2",
      "won": 5,
      "wonPercent": 71.4,
    },
    {
      "activitiesCompleted": 129,
      "activitiesTotal": 264,
      "avatarUrl": undefined,
      "channelProgress": [
        {
          "channel": "whatsapp",
          "color": "#22c55e",
          "completed": 29,
          "label": "WhatsApp",
          "total": 60,
        },
        {
          "channel": "phone",
          "color": "#8b5cf6",
          "completed": 30,
          "label": "Telefone",
          "total": 56,
        },
        {
          "channel": "linkedin",
          "color": "#0ea5e9",
          "completed": 30,
          "label": "LinkedIn",
          "total": 56,
        },
        {
          "channel": "research",
          "color": "#f59e0b",
          "completed": 26,
          "label": "Pesquisa",
          "total": 51,
        },
        {
          "channel": "email",
          "color": "#3b82f6",
          "completed": 14,
          "label": "Email",
          "total": 41,
        },
      ],
      "inboundReplies": 29,
      "leads": 23,
      "leadsInProspection": 4,
      "leadsWithFirstActivity": 111,
      "lost": 8,
      "name": "U1",
      "onTimePercent": 48.9,
      "phoneCalls": 56,
      "quartiles": [
        {
          "count": 3,
          "percent": 75,
          "quartile": 1,
        },
        {
          "count": 1,
          "percent": 25,
          "quartile": 3,
        },
      ],
      "totalLeads": 33,
      "userId": "u1",
      "won": 6,
      "wonPercent": 42.9,
    },
    {
      "activitiesCompleted": 49,
      "activitiesTotal": 124,
      "avatarUrl": undefined,
      "channelProgress": [
        {
          "channel": "email",
          "color": "#3b82f6",
          "completed": 8,
          "label": "Email",
          "total": 27,
        },
        {
          "channel": "whatsapp",
          "color": "#22c55e",
          "completed": 7,
          "label": "WhatsApp",
          "total": 26,
        },
        {
          "channel": "linkedin",
          "color": "#0ea5e9",
          "completed": 12,
          "label": "LinkedIn",
          "total": 24,
        },
        {
          "channel": "research",
          "color": "#f59e0b",
          "completed": 13,
          "label": "Pesquisa",
          "total": 24,
        },
        {
          "channel": "phone",
          "color": "#8b5cf6",
          "completed": 9,
          "label": "Telefone",
          "total": 23,
        },
      ],
      "inboundReplies": 17,
      "leads": 17,
      "leadsInProspection": 10,
      "leadsWithFirstActivity": 74,
      "lost": 5,
      "name": "U3",
      "onTimePercent": 39.5,
      "phoneCalls": 23,
      "quartiles": [
        {
          "count": 1,
          "percent": 10,
          "quartile": 1,
        },
        {
          "count": 4,
          "percent": 40,
          "quartile": 2,
        },
        {
          "count": 5,
          "percent": 50,
          "quartile": 3,
        },
      ],
      "totalLeads": 25,
      "userId": "u3",
      "won": 1,
      "wonPercent": 16.7,
    },
    {
      "activitiesCompleted": 61,
      "activitiesTotal": 124,
      "avatarUrl": undefined,
      "channelProgress": [
        {
          "channel": "whatsapp",
          "color": "#22c55e",
          "completed": 17,
          "label": "WhatsApp",
          "total": 32,
        },
        {
          "channel": "email",
          "color": "#3b82f6",
          "completed": 14,
          "label": "Email",
          "total": 29,
        },
        {
          "channel": "research",
          "color": "#f59e0b",
          "completed": 11,
          "label": "Pesquisa",
          "total": 24,
        },
        {
          "channel": "linkedin",
          "color": "#0ea5e9",
          "completed": 11,
          "label": "LinkedIn",
          "total": 20,
        },
        {
          "channel": "phone",
          "color": "#8b5cf6",
          "completed": 8,
          "label": "Telefone",
          "total": 19,
        },
      ],
      "inboundReplies": 13,
      "leads": 0,
      "leadsInProspection": 0,
      "leadsWithFirstActivity": 76,
      "lost": 0,
      "name": "u4",
      "onTimePercent": 49.2,
      "phoneCalls": 19,
      "quartiles": [],
      "totalLeads": 0,
      "userId": "u4",
      "won": 0,
      "wonPercent": null,
    },
  ],
}
`;

exports[`Atividades e Performance — mesmos números com os mesmos dados > Performance, 1 SDR e cadência c1 1`] = `
{
  "dailyControl": [
    {
      "available": 5,
      "avatarUrl": undefined,
      "calls": 14,
      "completed": 49,
      "emails": 18,
      "ignored": 0,
      "lastActivityAt": "2026-08-29T00:02:29.000Z",
      "lost": 2,
      "pending": 63,
      "prospecting": 12,
      "research": 24,
      "userId": "u2",
      "userName": "U2",
      "won": 4,
    },
  ],
  "dailySdrKeys": [
    "U2",
  ],
  "dailySdrTrend": [
    {
      "U2": 3,
      "date": "2026-08-01",
      "label": "01/08",
    },
    {
      "U2": 4,
      "date": "2026-08-02",
      "label": "02/08",
    },
    {
      "U2": 5,
      "date": "2026-08-03",
      "label": "03/08",
    },
    {
      "U2": 3,
      "date": "2026-08-04",
      "label": "04/08",
    },
    {
      "U2": 3,
      "date": "2026-08-05",
      "label": "05/08",
    },
    {
      "U2": 2,
      "date": "2026-08-06",
      "label": "06/08",
    },
    {
      "U2": 4,
      "date": "2026-08-08",
      "label": "08/08",
    },
    {
      "U2": 4,
      "date": "2026-08-09",
      "label": "09/08",
    },
    {
      "U2": 4,
      "date": "2026-08-10",
      "label": "10/08",
    },
    {
      "U2": 2,
      "date": "2026-08-11",
      "label": "11/08",
    },
    {
      "U2": 3,
      "date": "2026-08-12",
      "label": "12/08",
    },
    {
      "U2": 5,
      "date": "2026-08-13",
      "label": "13/08",
    },
    {
      "U2": 3,
      "date": "2026-08-14",
      "label": "14/08",
    },
    {
      "U2": 5,
      "date": "2026-08-15",
      "label": "15/08",
    },
    {
      "U2": 5,
      "date": "2026-08-16",
      "label": "16/08",
    },
    {
      "U2": 2,
      "date": "2026-08-17",
      "label": "17/08",
    },
    {
      "U2": 4,
      "date": "2026-08-18",
      "label": "18/08",
    },
    {
      "U2": 5,
      "date": "2026-08-19",
      "label": "19/08",
    },
    {
      "U2": 6,
      "date": "2026-08-20",
      "label": "20/08",
    },
    {
      "U2": 4,
      "date": "2026-08-21",
      "label": "21/08",
    },
    {
      "U2": 7,
      "date": "2026-08-22",
      "label": "22/08",
    },
    {
      "U2": 2,
      "date": "2026-08-23",
      "label": "23/08",
    },
    {
      "U2": 5,
      "date": "2026-08-24",
      "label": "24/08",
    },
    {
      "U2": 4,
      "date": "2026-08-25",
      "label": "25/08",
    },
    {
      "U2": 9,
      "date": "2026-08-26",
      "label": "26/08",
    },
    {
      "U2": 8,
      "date": "2026-08-27",
      "label": "27/08",
    },
    {
      "U2": 1,
      "date": "2026-08-28",
      "label": "28/08",
    },
  ],
  "qualificationRate": 33.3,
  "sdrComparison": [
    {
      "activities": 112,
      "userEmail": "U2",
    },
  ],
  "sdrTable": [
    {
      "activities": 112,
      "leadsCreated": 21,
      "meetings": 15,
      "qualificationRate": 33.3,
      "qualified": 7,
      "userEmail": "U2",
      "userId": "u2",
    },
  ],
  "totalActivities": 112,
  "totalLeadsCreated": 21,
  "totalQualified": 7,
}
`;

exports[`Atividades e Performance — mesmos números com os mesmos dados > Performance, todos os membros 1`] = `
{
  "dailyControl": [
    {
      "available": 3,
      "avatarUrl": undefined,
      "calls": 56,
      "completed": 148,
      "emails": 41,
      "ignored": 0,
      "lastActivityAt": "2026-08-29T02:18:56.000Z",
      "lost": 8,
      "pending": 156,
      "prospecting": 4,
      "research": 51,
      "userId": "u1",
      "userName": "U1",
      "won": 6,
    },
    {
      "available": 5,
      "avatarUrl": undefined,
      "calls": 48,
      "completed": 143,
      "emails": 45,
      "ignored": 0,
      "lastActivityAt": "2026-08-29T02:31:17.000Z",
      "lost": 2,
      "pending": 180,
      "prospecting": 12,
      "research": 46,
      "userId": "u2",
      "userName": "U2",
      "won": 4,
    },
    {
      "available": 5,
      "avatarUrl": undefined,
      "calls": 23,
      "completed": 62,
      "emails": 27,
      "ignored": 0,
      "lastActivityAt": "2026-08-28T23:40:20.000Z",
      "lost": 4,
      "pending": 96,
      "prospecting": 10,
      "research": 24,
      "userId": "u3",
      "userName": "U3",
      "won": 1,
    },
  ],
  "dailySdrKeys": [
    "U2",
    "U1",
    "U3",
  ],
  "dailySdrTrend": [
    {
      "U1": 11,
      "U2": 11,
      "U3": 4,
      "date": "2026-08-01",
      "label": "01/08",
    },
    {
      "U1": 9,
      "U2": 10,
      "U3": 7,
      "date": "2026-08-02",
      "label": "02/08",
    },
    {
      "U1": 12,
      "U2": 15,
      "U3": 4,
      "date": "2026-08-03",
      "label": "03/08",
    },
    {
      "U1": 13,
      "U2": 12,
      "U3": 6,
      "date": "2026-08-04",
      "label": "04/08",
    },
    {
      "U1": 8,
      "U2": 13,
      "U3": 6,
      "date": "2026-08-05",
      "label": "05/08",
    },
    {
      "U1": 12,
      "U2": 8,
      "U3": 6,
      "date": "2026-08-06",
      "label": "06/08",
    },
    {
      "U1": 7,
      "U2": 4,
      "U3": 5,
      "date": "2026-08-07",
      "label": "07/08",
    },
    {
      "U1": 9,
      "U2": 14,
      "U3": 5,
      "date": "2026-08-08",
      "label": "08/08",
    },
    {
      "U1": 13,
      "U2": 11,
      "U3": 5,
      "date": "2026-08-09",
      "label": "09/08",
    },
    {
      "U1": 18,
      "U2": 8,
      "U3": 9,
      "date": "2026-08-10",
      "label": "10/08",
    },
    {
      "U1": 14,
      "U2": 8,
      "U3": 10,
      "date": "2026-08-11",
      "label": "11/08",
    },
    {
      "U1": 11,
      "U2": 15,
      "U3": 4,
      "date": "2026-08-12",
      "label": "12/08",
    },
    {
      "U1": 13,
      "U2": 16,
      "U3": 3,
      "date": "2026-08-13",
      "label": "13/08",
    },
    {
      "U1": 12,
      "U2": 12,
      "U3": 5,
      "date": "2026-08-14",
      "label": "14/08",
    },
    {
      "U1": 17,
      "U2": 9,
      "U3": 5,
      "date": "2026-08-15",
      "label": "15/08",
    },
    {
      "U1": 14,
      "U2": 14,
      "U3": 11,
      "date": "2026-08-16",
      "label": "16/08",
    },
    {
      "U1": 8,
      "U2": 10,
      "U3": 7,
      "date": "2026-08-17",
      "label": "17/08",
    },
    {
      "U1": 3,
      "U2": 10,
      "U3": 4,
      "date": "2026-08-18",
      "label": "18/08",
    },
    {
      "U1": 16,
      "U2": 18,
      "U3": 6,
      "date": "2026-08-19",
      "label": "19/08",
    },
    {
      "U1": 8,
      "U2": 11,
      "U3": 5,
      "date": "2026-08-20",
      "label": "20/08",
    },
    {
      "U1": 10,
      "U2": 11,
      "U3": 7,
      "date": "2026-08-21",
      "label": "21/08",
    },
    {
      "U1": 13,
      "U2": 10,
      "U3": 5,
      "date": "2026-08-22",
      "label": "22/08",
    },
    {
      "U1": 12,
      "U2": 10,
      "U3": 4,
      "date": "2026-08-23",
      "label": "23/08",
    },
    {
      "U1": 11,
      "U2": 13,
      "U3": 3,
      "date": "2026-08-24",
      "label": "24/08",
    },
    {
      "U1": 9,
      "U2": 12,
      "U3": 6,
      "date": "2026-08-25",
      "label": "25/08",
    },
    {
      "U1": 8,
      "U2": 17,
      "U3": 6,
      "date": "2026-08-26",
      "label": "26/08",
    },
    {
      "U1": 8,
      "U2": 11,
      "U3": 6,
      "date": "2026-08-27",
      "label": "27/08",
    },
    {
      "U1": 5,
      "U2": 10,
      "U3": 4,
      "date": "2026-08-28",
      "label": "28/08",
    },
  ],
  "qualificationRate": 34.4,
  "sdrComparison": [
    {
      "activities": 323,
      "userEmail": "U2",
    },
    {
      "activities": 304,
      "userEmail": "U1",
    },
    {
      "activities": 158,
      "userEmail": "U3",
    },
  ],
  "sdrTable": [
    {
      "activities": 323,
      "leadsCreated": 21,
      "meetings": 47,
      "qualificationRate": 33.3,
      "qualified": 7,
      "userEmail": "U2",
      "userId": "u2",
    },
    {
      "activities": 304,
      "leadsCreated": 23,
      "meetings": 52,
      "qualificationRate": 47.8,
      "qualified": 11,
      "userEmail": "U1",
      "userId": "u1",
    },
    {
      "activities": 158,
      "leadsCreated": 17,
      "meetings": 23,
      "qualificationRate": 17.6,
      "qualified": 3,
      "userEmail": "U3",
      "userId": "u3",
    },
  ],
  "totalActivities": 785,
  "totalLeadsCreated": 61,
  "totalQualified": 21,
}
`;
